--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <select value={index} onChange={onSelect}>
             <option value="xx">Select your units</option>
             <option value="0">Minutes & Hours</option>
-            <option value="1">Km $ Miles</option>
+            <option value="1">Km & Miles</option>
           </select>
           <hr />
           {index === "xx" ? "Please select your units" : null}
